# temp-cola

./: .gitignore  .gitmodules  08a-fortran-magic.ipynb  Readme.txt  codespaces-colab-init.ipynb  environment.yml  stackoverflow-79661744.ipynb  stackoverflow-8585880.ipynb
SO/: 77889635-fast-implementation-of-the-1-parameter-division-distortion-model.ipynb  79237302-best-way-to-handle-multiple-exit-points-in-fortran.ipynb
SO/1521607-check-double-variable-if-it-contains-an-integer/: Readme-RU.md  catch2
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.ru.md  Test.md  countof_ns.h  example.c  examples-build.bat  examples-build.sh  test11_example.sh  test_example.sh
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/docs/: comparison_table.md
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/examples/: CMakeLists.txt  long_example.h  long_example_cxx.cpp  short_example.h  short_example_cxx.cpp
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/include/: countof_ns.h
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/include/_comparisons/: ALX_COUNTOF.h  ARRAY_LEN.h  COUNTOF.h  JZMG_ARRAY_LEN.h  array_size.h  lnx_array_size.h  ms_countof.h  stdc_countof.h  stdcountof.h
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/: CMakeLists.txt  check_test_log.gawk
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/abort_compiler/: on_array.c  on_pointer_subtraction.c  on_struct_bitfield.c  on_struct_static_assert.c
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/autoconf/: autoconf.cmake  error_on_negative_array_size.c  error_on_pointer_subtraction.c  error_on_sizeof_pointer_subtraction.c  error_on_struct_bit_field.c  error_on_struct_static_assert.c  have___typeof__.c  have_alone_flexible_array.c  have_countof.c  have_countof_vla.c  have_countof_zla.c  have_cv_typeof.c  have_empty_initializer.c  have_empty_structure.c  have_typeof.c  have_vla.c  have_zero_length_arrays.c  tac_defs.h
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/complex/: CMakeLists.txt
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/unit/: CMakeLists.txt  negative__selftest.h  negative_alone_ptr.h  negative_cv_ptr.h  negative_other.h  negative_ptr.h  negative_ptr_1.h  negative_vla_ptr.h  negative_vla_zla_ptr.h  negative_zla_ptr.h  positive__selftest.h  positive_alone_n0.h  positive_alone_zla_00.h  positive_array.h  positive_array_1.h  positive_cv_array.h  positive_struct_n0.h  positive_struct_zla_00.h  positive_vla_.h  positive_vla_alone_n0.h  positive_vla_alone_zla_00.h  positive_vla_cv.h  positive_vla_struct_n0.h  positive_vla_struct_zla_00.h  positive_vla_zla_00.h  positive_vla_zla_0n.h  positive_vla_zla_n0.h  positive_zla_00.h  positive_zla_0n.h  positive_zla_n0.h  tu_stub.c  tu_stub.h
SO/37538-how-do-i-determine-the-size-of-my-array-in-c/tests/unit/redundant/: negative_other_2.h  negative_other_3.h  negative_ptr_4_short_example_72.h  negative_ptr_short_example_74.h  positive_array_2.h  positive_array_3.h  positive_array_4.h  positive_vla_2.h  positive_vla_3.h  positive_vla_4.h  positive_zla_00_3.h  positive_zla_0n_2.h  positive_zla_0n_3.h  positive_zla_n0_3.h
ruSO/: 1614688-pickle-и-классы-наследники.ipynb  1614729-Matplotlib-и-pickle.ipynb  1615333-Найти-длину-строки-от-big-факториала-в-питоне.ipynb  Matplotlib-и-pickle.ipynb
ruSO-1504743/: NumPy-linalg.ipynb  cpp-eigen3.cpp
ruSO-1611089/: CMakeLists.txt  charconv128.hpp  charconv_repair.hpp  complex128.cpp  mybuild.bat  mybuild.sh  test_charconv.cpp  test_charconv128.cpp  test_charconv_repair.cpp
ruSO-1611089/tests/: CMakeLists.txt
ruSO-1611089/tests/charconv_repair/: has_std.tests.cpp
ruSO/1504743-Как-найти-точку-в-прямоугольнике-которая-не-изменит-своего-положения-при-его-ум/: cpp-eigen3.cpp
ruSO/1610587-Как-проверить-что-тип-t-поддерживается-iostream-format-или-to-chars/: StringableSO.cpp
ruSO/1611089-Есть-ли-какая-либо-возможность-явно-вызвать-оператор-встроенного-литерала/: CMakeLists.txt  mybuild.bat
ruSO/1611089-Есть-ли-какая-либо-возможность-явно-вызвать-оператор-встроенного-литерала/include/float_format/: charconv_repair.hpp
ruSO/1611089-Есть-ли-какая-либо-возможность-явно-вызвать-оператор-встроенного-литерала/tests/charconv_repair/: from_to_chars-tests.cpp
ruSO/1615333-Найти-длину-факториала/: CMakeLists.txt  concat.sh  i64_interval.cpp  mybuild.sh  qdpy2_cstdint.hpp  Варианты-и-график.ipynb
ruSO/1615333-Найти-длину-факториала/out_i64/: .gitignore
ruSO/1615614-Загрузка-данных-записки/: .gitattributes  Загрузка-данных-записки.ipynb  текстовый-файл.txt
ruSO/1616847-Фиолетово-розовый/:  Фиолетово-розовый.ipynb  Фиолетово-розовый.ipynb
ruSO/pickle-и-классы-наследники/: pickle-и-классы-наследники.ipynb
ruSO/Загрузка-данных-записки/: Загрузка-данных-записки.ipynb  картинка-2.tiff
stackoverflow-1521607/: Readme-RU.md  Readme-RU.txt  Readme.md  isintT.cpp
stackoverflow-1610587/: StringableSO.cpp
